#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.63])
AC_INIT([strpercpp], [0.0.0], [takuyamakino15@gmail.com])
AM_INIT_AUTOMAKE()

AC_PROG_LIBTOOL

# Checks for programs.
#AC_PROG_CXX([-std=c++0x])
#AC_PROG_CXX([-std=c++11 -g -pg])
AC_PROG_CXX([])

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.


AC_CONFIG_FILES([
		 Makefile
		 src/Makefile
		 tests/Makefile
		 ])

AC_OUTPUT
